refactor & fix: playList 등록시 다중 insert 문 처리, playList 생성 로직 분리